--- a/app/src/style.css
+++ b/app/src/style.css
@@ -1,3 +1,9 @@
 .react-datepicker-wrapper {
   width: 100%;
 }
+.centered-icon {
+  display: flex;
+  justify-content: center; /* Horizontally center the content */
+  align-items: center; /* Vertically center the content */
+  text-align: center;
+}
